# catkin_ws

./: .README.md.swp  .gitignore  README.md  catkin_ws.files  catkin_ws.includes  dps_low_speed.txt  jetson_remote.code-workspace  odroid_remote.code-workspace  odroid_tennisbot_v1_wifi.code-workspace
build-src-Desktop_Qt_5_12_9_GCC_64bit-RelWithDebInfo/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  Project.cbp  cmake_install.cmake  qtcsettings.cmake
build-src-Desktop_Qt_5_12_9_GCC_64bit-RelWithDebInfo/2link_planar_exp/: 2link_planar_exp.cbp  CTestTestfile.cmake  Makefile  cmake_install.cmake  qrc_images.cxx  ui_main_window.h  ui_me_exp_2020.h
build-src-Desktop_Qt_5_12_9_GCC_64bit-RelWithDebInfo/amg_p1/: CTestTestfile.cmake  Makefile  amg_p1.cbp  cmake_install.cmake
build-src-Desktop_Qt_5_12_9_GCC_64bit-RelWithDebInfo/atomic_configure/: .rosinstall  local_setup.sh  setup.sh
build-src-Desktop_Qt_5_12_9_GCC_64bit-RelWithDebInfo/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
build-src-Desktop_Qt_5_12_9_GCC_64bit-RelWithDebInfo/differential_wheel_platform/: CTestTestfile.cmake  Makefile  cmake_install.cmake  diff_wheel_platform.cbp
build-src-Desktop_Qt_5_12_9_GCC_64bit-RelWithDebInfo/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  googletest-distribution.cbp
build-src-Desktop_Qt_5_12_9_GCC_64bit-RelWithDebInfo/huboq_remastered_test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  huboq_remastered_test.cbp
build-src-Desktop_Qt_5_12_9_GCC_64bit-RelWithDebInfo/huboq_remastered_ver1/: CTestTestfile.cmake  Makefile  cmake_install.cmake  huboq_remastered_ver1.cbp
build-src-Desktop_Qt_5_12_9_GCC_64bit-RelWithDebInfo/mecanum_robot_ver1/: CTestTestfile.cmake  Makefile  cmake_install.cmake  mecanum_robot_ver1.cbp
build-src-Desktop_Qt_5_12_9_GCC_64bit-RelWithDebInfo/omniwheel_robot/: CTestTestfile.cmake  Makefile  cmake_install.cmake  omniwheel_robot.cbp
build-src-Desktop_Qt_5_12_9_GCC_64bit-RelWithDebInfo/qtros/: CTestTestfile.cmake  Makefile  cmake_install.cmake  qrc_images.cxx  qtros.cbp  ui_main_window.h
build-src-Desktop_Qt_5_12_9_GCC_64bit-RelWithDebInfo/qtros_cdi/: CTestTestfile.cmake  Makefile  cmake_install.cmake  qtros.cbp
build-src-Desktop_Qt_5_12_9_GCC_64bit-RelWithDebInfo/razor_imu_9dof/: CTestTestfile.cmake  Makefile  cmake_install.cmake  razor_imu_9dof.cbp  setup_custom_pythonpath.sh
build-src-Desktop_Qt_5_12_9_GCC_64bit-RelWithDebInfo/teleop_twist_keyboard/: CTestTestfile.cmake  Makefile  cmake_install.cmake  teleop_twist_keyboard.cbp
build-src-Desktop_Qt_5_12_9_GCC_64bit-RelWithDebInfo/tennis_ball_machine/: CTestTestfile.cmake  Makefile  cmake_install.cmake  tennis_ball_machine.cbp
build-src-Desktop_Qt_5_12_9_GCC_64bit-RelWithDebInfo/two_link_planar_exp/: 2link_planar_exp.cbp  CTestTestfile.cmake  Makefile  cmake_install.cmake  qrc_images.cxx  two_link_planar_exp.cbp
build-src-Desktop_Qt_5_12_9_GCC_64bit-RelWithDebInfo/vesc_control_ex1/: CTestTestfile.cmake  Makefile  cmake_install.cmake  vesc_control_ex1.cbp
build-src-Desktop_Qt_5_12_9_GCC_64bit-RelWithDebInfo/vesc_control_ex2/: CTestTestfile.cmake  Makefile  cmake_install.cmake  vesc_control_ex2.cbp
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
src/amg_p1/: CMakeLists.txt  package.xml
src/amg_p1/include/: amg_p1.h  computed_torque_control.h  lqr_motion_planner.h  mpc_motion_planner.h
src/amg_p1/msg/: CTM_Message.msg  MP_Message.msg
src/amg_p1/src/: amg_p1_node.cpp  lqr_motion_planner.cpp  mpc_motion_planner.cpp
src/kitech_legged_segway_robot_v0.2/kitech_legged_segway_robot/kitech_controllers/: CMakeLists.txt  controller_plugins.xml  package.xml
src/kitech_legged_segway_robot_v0.2/kitech_legged_segway_robot/kitech_controllers/include/: body_cmd_joy.h  main_controller.h
src/kitech_legged_segway_robot_v0.2/kitech_legged_segway_robot/kitech_controllers/include/leg_controllers/: leg_controller.h  leg_desired.h  virtual_spring_damper_controller.h
src/kitech_legged_segway_robot_v0.2/kitech_legged_segway_robot/kitech_controllers/include/segway_controllers/: segway_controller.h
src/kitech_legged_segway_robot_v0.2/kitech_legged_segway_robot/kitech_controllers/src/: body_cmd_joy.cpp  main_controller.cpp
src/kitech_legged_segway_robot_v0.2/kitech_legged_segway_robot/kitech_controllers/src/leg_controllers/: leg_controller.cpp  leg_desired.cpp  virtual_spring_damper_controller.cpp
src/kitech_legged_segway_robot_v0.2/kitech_legged_segway_robot/kitech_controllers/src/segway_controllers/: segway_controller.cpp
src/kitech_segway_type/kitech_segway_urdf_pkg/: CMakeLists.txt  kitech_segway_stl.xacro  package.xml  urdf.rviz
src/kitech_segway_type/kitech_segway_urdf_pkg/V-Rep_Scene/: kitech_segway_type_ver1.ttt
src/kitech_segway_type/kitech_segway_urdf_pkg/launch/: view_kitech_segway_type_stl.launch
src/kitech_segway_type/kitech_segway_urdf_pkg/mesh/stl_brep/: Segway Type_rev3_body.stl
src/kitech_segway_type/kitech_segway_urdf_pkg/urdf/: kitech_segway_stl.xacro  kitech_segway_stl_generated.urdf
src/mjvesc_ros/mjvesc_driver/: CMakeLists.txt  package.xml  vesc_driver_nodelet.xml
src/mjvesc_ros/mjvesc_driver/include/: mjvesc_driver.h  mjvesc_interface.h  mjvesc_packet.h  mjvesc_packet_factory.h
src/mjvesc_ros/mjvesc_driver/src/: mjvesc_driver.cpp  mjvesc_driver_node.cpp  mjvesc_driver_nodelet.cpp  mjvesc_interface.cpp  mjvesc_packet.cpp  mjvesc_packet_factory.cpp
src/mjvesc_ros/mjvesc_msgs/: CMakeLists.txt  package.xml
src/mjvesc_ros/mjvesc_msgs/msg/: MJVescStateStamped.msg
src/mjvesc_ros/mjvesc_ros/: CMakeLists.txt  package.xml
src/ngimu_ros/: CMakeLists.txt  package.xml
src/ngimu_ros/launch/: ngimu-pub.launch
src/ngimu_ros/nodes/: ngimu_node.py  osc_decoder.py
src_not_compatible/olinrobotics/tractor_sim_packages/sim_localization/: package.xml
src_not_compatible/olinrobotics/tractor_sim_packages/sim_localization/config/: ekfparams.yaml
src_not_compatible/olinrobotics/tractor_sim_packages/sim_localization/launch/: bringup.launch  ekf.launch
(+597 files in other folders)
