<?xml version="1.0"?>
<package>
  <name>mjvesc_driver</name>
  <version>0.0.1</version>
  <description>
    Metapackage for ROS interface to the Vedder VESC open source motor controller, MJVESC Edition.
  </description>

  <maintainer email="dongilc@mju.ac.kr">Dongil Choi</maintainer>
  <author email="dongilc@mju.ac.kr">Dongil Choi</author>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/vesc_driver</url>
  <url type="repository">https://github.mit.edu/racecar/vesc</url>
  <url type="bugtracker">https://github.mit.edu/racecar/vesc/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mjvesc_msgs</build_depend>
  <build_depend>serial</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mjvesc_msgs</run_depend>
  <run_depend>serial</run_depend>

  <export>
    <nodelet plugin="${prefix}/mjvesc_driver_nodelet.xml"/>
  </export>

</package>
