<?xml version="1.0"?>
<package>
  <name>mjvesc_msgs</name>
  <version>0.0.1</version>
  <description>
    Metapackage for ROS interface to the Vedder VESC open source motor controller, MJVESC Edition.
  </description>

  <maintainer email="dongilc@mju.ac.kr">Dongil Choi</maintainer>
  <author email="dongilc@mju.ac.kr">Dongil Choi</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/vesc_msgs</url>
  <url type="repository">https://github.mit.edu/racecar/vesc</url>
  <url type="bugtracker">https://github.mit.edu/racecar/vesc/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
