<?xml version="1.0"?>
<package>
  <name>mjvesc_ros</name>
  <version>0.0.1</version>
  <description>
    Metapackage for ROS interface to the Vedder VESC open source motor controller, MJVESC Edition.
  </description>

  <maintainer email="dongilc@mju.ac.kr">Dongil Choi</maintainer>
  <author email="dongilc@mju.ac.kr">Dongil Choi</author>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/vesc</url>
  <url type="repository">https://github.mit.edu/racecar/vesc</url>
  <url type="bugtracker">https://github.mit.edu/racecar/vesc/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>mjvesc_driver</run_depend>
  <run_depend>mjvesc_msgs</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
